syntax = "proto3";

package proto.gateway.v1;

option go_package = "github.com/knwoop/microservices-example/gen/proto/gateway";

import "google/api/annotations.proto";

// The greeting service for gateway definition.
service GreeterService {
  // Sends a greeting
  rpc SayHello (SayHelloRequest) returns (GreeterServiceSayHelloResponse) {
    option (google.api.http) = {
      get: "/say_hello/{name}"
    };
  }
  rpc GetUser (GetUserRequest) returns (GetUserResponse) {
    option (google.api.http) = {
      get: "/user/{id}"
    };
  }
}

// The request message containing the user's name.
message SayHelloRequest {
  string name = 1;
}

// The response message containing the greetings
message GreeterServiceSayHelloResponse {
  string message = 1;
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
}

message User {
  string id = 1;
  string name = 2;
}
